--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.13",
     "@angular/material": "^19.2.17",
+    "@angular/cdk": "^19.2.17",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
