corrigindo problema no JWT

--- a/backend/ms-autenticacao/ms-autenticacao/src/main/resources/application.properties
+++ b/backend/ms-autenticacao/ms-autenticacao/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
-jwt.secret=c2VjcmV0a2V5Zm9ybWlvZG90dG9yZWFwcGxpY2F0aW9uMjU2Yml0cw==
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 
 ms.paciente.url=http://ms-paciente:8082
