--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "ngx-mask": "^19.0.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "emailjs-com": "^3.2.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.13",
