--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^19.2.17",
     "@angular/common": "^19.2.13",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.13",
     "@angular/material": "^19.2.17",
-    "@angular/cdk": "^19.2.17",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
@@ -23,8 +23,7 @@
     "ngx-mask": "^19.0.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0",
-    "emailjs-com": "^3.2.0"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.13",
