--- a/backend/ms-autenticacao/ms-autenticacao/src/main/resources/application.properties
+++ b/backend/ms-autenticacao/ms-autenticacao/src/main/resources/application.properties
@@ -16,3 +16,12 @@ jwt.expiration=86400000
 
 ms.paciente.url=http://ms-paciente:8082
 ms.consulta.url=http://ms-consulta-agendamento:8083
+
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME:goncalvesaraujofellipe@gmail.com}
+spring.mail.password=${EMAIL_PASSWORD:specspidey}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
