--- a/backend/ms-consulta-agendamento/ms-consulta-agendamento/src/main/resources/application.properties
+++ b/backend/ms-consulta-agendamento/ms-consulta-agendamento/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
 ms.paciente.url=http://ms-paciente:8082
+
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME:goncalvesaraujofellipe@gmail.com}
+spring.mail.password=${EMAIL_PASSWORD:specspidey}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
