--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Configurações de Email para envio de senhas
 EMAIL_USERNAME=goncalvesaraujofellipe@gmail.com
-EMAIL_PASSWORD=ypoz zbyi nwyr yhtc
+EMAIL_PASSWORD=pnex spxv udnu cqxl
